[gd_scene load_steps=2 format=3 uid="uid://cqm8k7x2qvn8w"]

[ext_resource type="Script" uid="uid://b7kiu72jt214l" path="res://addons/FennecTools/View/conditional_editor.gd" id="1_8x9yv"]

[node name="ConditionalEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8x9yv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Conditionals Editor"
horizontal_alignment = 1

[node name="FilterContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/FilterContainer"]
layout_mode = 2
text = "Filter by group:"

[node name="GroupFilter" type="OptionButton" parent="VBoxContainer/FilterContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "All"
popup/item_0/id = 0
popup/item_1/text = "default"
popup/item_1/id = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
item_count = 3
item_0/text = "[default] â›” pp1 (ID: 1)"
item_1/text = "[default] 10.00 pp2 (ID: 2)"
item_2/text = "[default] [3 texts] pp3 (ID: 3)"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Conditional name"

[node name="TypeOption" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Boolean"
popup/item_0/id = 0
popup/item_1/text = "Numeric"
popup/item_1/id = 1
popup/item_2/text = "Texts"
popup/item_2/id = 2

[node name="ValueCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Value"

[node name="ValueSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
min_value = -999999.0
max_value = 999999.0
step = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GroupInput" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Group (optional)"

[node name="DescriptionInput" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Conditional description..."

[node name="TextValuesContainer" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TextValuesContainer"]
layout_mode = 2
text = "Multiple text values:"

[node name="TextValuesList" type="ItemList" parent="VBoxContainer/TextValuesContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TextValuesContainer"]
layout_mode = 2

[node name="TextInput" type="LineEdit" parent="VBoxContainer/TextValuesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New text value..."

[node name="AddTextButton" type="Button" parent="VBoxContainer/TextValuesContainer/HBoxContainer"]
layout_mode = 2
text = "Add"

[node name="RemoveTextButton" type="Button" parent="VBoxContainer/TextValuesContainer/HBoxContainer"]
layout_mode = 2
text = "Remove"

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Add"

[node name="EditButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Edit"

[node name="DeleteButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Delete"
